--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -238,12 +238,14 @@
         <p align="justify">
           Conducted research in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by Huawei-ICTL and TUM-CMS (Grade: 1.0/1.0).  
             <ul>
-              
+              <details>
+                <summary>Click to view details</summary>
               <li align="justify">Developed scalable method for constructing 3D scene through incremental association of instance level details from 2D foundation models to 3D space. </li>
               <li align="justify">Developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries. Quantitative and qualitative performance exceeds current state of the art.</li> 
               <li align="justify">Additionally, conducted explorative study and demonstrated global automatic labeling and spatial reasoning over 3D scene, using large language modes.</li>
               <li align="justify">Currently, working on research paper based on findings.</li> 
             </ul>
+          </details>
         </p>
 
         <br>
