drop down test-2

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -236,7 +236,7 @@
         Oct 2023 - Apr 2024
         <br>
         <p align="justify">
-          <details></details>
+          <details>
           <summary>Conducted research in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by Huawei-ICTL and TUM-CMS (Grade: 1.0/1.0).</summary>            
           <ul>
               <li align="justify">Developed scalable method for constructing 3D scene through incremental association of instance level details from 2D foundation models to 3D space. </li>
