--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -107,8 +107,8 @@
               <p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p> 
 
           
-              <p align="justify">I am Master's student majoring in Computational Mechanics, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. Currently I am working  on my masters thesis '3D Spatial Reasoning' at <a href="https://huawei.eu/">Huawei-Intelligent Cloud Technologies Lab</a>, 
+              <p align="justify">I completed my masters, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I conducted my masters thesis in the field of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
                 before this I was working as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
               </p>
@@ -163,7 +163,7 @@
             Oct 2021 - Apr 2024
             <br>
             <p align="justify">
-              <b>Thesis:</b> Open World 3D Scene Understanding (<a href="https://huawei.eu/">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
+              <b>Thesis:</b> Open World 3D Scene Understanding (<a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
@@ -239,10 +239,13 @@
           <details>
           <summary>Conducted research in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by Huawei-ICTL and TUM-CMS (Grade: 1.0/1.0).</summary>            
           <ul>
-              <li align="justify">Developed scalable method for constructing 3D scene through incremental association of instance level details from 2D foundation models to 3D space. </li>
-              <li align="justify">Developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries. Quantitative and qualitative performance exceeds current state of the art.</li> 
+              <li align="justify">Developed incremental and scalable framework for zero-shot 3D scene understanding utilizing foundation and large language models. </li>
+              <li align="justify">Quantitatively and qualitatively demonstrated effectiveness of open vocabulary segmentation and context-based instance retrieval, exceeding state-of-the-art approaches. </li>
+              <li align="justify">Explored downstream applications such as 3D instance segmentation, automatic labeling, and spatial reasoning (chat with scene using LLM). </li>
+              <li align="justify">Currently, working on research paper to publish on findings. </li>
+              <!--li align="justify">Developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries. Quantitative and qualitative performance exceeds current state of the art.</li> 
               <li align="justify">Additionally, conducted explorative study and demonstrated global automatic labeling and spatial reasoning over 3D scene, using large language modes.</li>
-              <li align="justify">Currently, working on research paper based on findings.</li> 
+              <li align="justify">Currently, working on research paper based on findings.</li--> 
             </ul>
           </details>
         </p>
@@ -253,15 +256,16 @@
         Apr 2023 - Oct 2024
         <br>
         <p align="justify">
-          Contributed as a Robotics Research Intern at <a href="https://huawei.eu/">Huawei's Intelligent Cloud Technologies Lab</a>, with a focus on the area of 3D perception.
+          <details>
+            <summary>Contributed as a Robotics Research Intern at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei's Intelligent Cloud Technologies Lab</a> in the area of 3D robotics perception, primarily focusing on LiDAR-based Life Long Localization and Mapping.
+          
          
             <ul>
-                <li align="justify">Researched methods for improving LiDAR-based localization and mapping, incorporating multiple functionalities based on research 
-                  (hierarchical bundle adjustment, pose graph optimization, etc.) to improvethe performance of LiDAR-based lifelong localization and mapping modules</li>
-                <li align="justify">Conducted an extensive literature review to identify recent trends and potential
-                research directions in 3D perception and spatial computing.</li>
-                <li align="justify"> Developed a proof-of-concept system for open-vocabulary 3D object detection.</li>
+                <li align="justify">Research cutting-edge techniques to improve LiDAR-based lifelong localization and mapping systems. Implemented hierarchical bundle adjustment, pose graph optimization, etc. to enhance localization and mapping performance.</li>
+                <li align="justify">Refactor and modularize the SLAM pipeline to facilitate scalability, maintainability, and ease of integration with future enhancements.</li>
+                <li align="justify"> Studied and implemented recent methods, and explored potential research directions in the areas of 3D Robotics Perception, Neural Radiance Field, and Scene Understanding.</li>
             </ul>
+          </details>
         </p>
     </td>
   </tr>
@@ -281,7 +285,8 @@
             Apr 2022 - Apr 2023
             <br>
             <p align="justify">
-              Contributed to the <a href="https://intrepid-project.eu/">Intriped Project</a> as a student research assistant and the 
+              <details>
+                <summary>Contributed to the <a href="https://intrepid-project.eu/">Intriped Project</a> as a student research assistant and the 
               <a href="https://amc-trr277.de/">Additive Manufacturing Project</a> as part of software practicum at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
                 <ul>
                   <li align="justify">Proposed methodology for robust, real-time control of material 
@@ -296,6 +301,7 @@
                     SLAM libraries for seamless use in indoor and outdoor environments.</li>
 
                 </ul>
+              </details>
                 <div style="text-align: center;">
                   <img src="images/robot_walk_6.gif" alt="go1" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
                 </div>
@@ -334,18 +340,16 @@
           Jul 2020 - Oct 2021
           <br>
           <p align="justify">
-            Contributed to a diverse set of projects as Research Engineer at <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
+            <details>
+              <summary>Contributed to a diverse set of projects focused on the development of aerial robots at the <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
             National University of Science and University.
             <ul>
-              <li align="justify">Developed setup for Software in the Loop (SITL) simulation for flight controller tuning. Integrated the x-Plane flight simulator with the flight controller
-               firmware. Based on aeronatical-design, developed models of vertical take off and fixed wing ariel vehicles for the simulator.
-              </li>
-              <li align="justify">Carried out end to end development of vertical take off and fixed wing ariel
-                vehicles, from preliminary design (aeronautics calculations), detail design (detailed CAD assemblies) to the export of manufacturing plans. 
-                Optimized design, aerodynamics and structural components by conducting CFD, FEA, FSI
-                simulations.</li>
+              <li align="justify">Developed setup for Software in the Loop (SITL) simulation for tuning the flight controller. Integrated the X-Plane flight simulator with the flight controller firmware. Based on aeronautical design, developed models of vertical take-off and fixed-wing aerial vehicles for the simulator.</li>
+              <li align="justify">Carried out end-to-end development of vertical take-off and fixed-wing aerial vehicles, from preliminary design (aeronautics calculations), detailed design (detailed CAD assemblies) to the export of manufacturing plans. Optimized design, aerodynamics, and structural components by conducting CFD, FEA, FSI simulations.</li>
               <li align="justify">Provided guidance and mentorship to undergraduate interns to support project development.</li>    
-          </p>
+            </ul>
+            </details>
+            </p>
           
           <div class="row">
             <div class="column">
@@ -371,8 +375,10 @@
           Jul 2019 - Jan 2020
           <br>
           <p align="justify">
-            Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
+            <details>
+              <summary>Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
               <ul>
+                
                   <li align="justify">Conducted a comparative study to numerically assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
                     a hydraulic jump in jet impingement cooling.</li>
                   <li align="justify">Extensively reviewed literature and conducted numerical simulations related to impinging jets focusing on the influence of different types of fins,
@@ -380,6 +386,7 @@
                     characteristics. Collaborate on two peer-reviewed research papers based on findings.</li>
                   <li align="justify">Mentored undergraduate student groups, on their research project.</li>
               </ul>
+            </details>
               <div style="text-align: center;">
                 <img src="images/cfd_jet.gif" alt="cfd" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
               </div>
