--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -257,9 +257,7 @@
         <br>
         <p align="justify">
           <details>
-            <summary>Contributed as a Robotics Research Intern at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei's Intelligent Cloud Technologies Lab</a> in the area of 3D robotics perception, primarily focusing on LiDAR-based Life Long Localization and Mapping.
-          
-         
+            <summary>Contributed as a Robotics Research Intern at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei's Intelligent Cloud Technologies Lab</a> in the area of 3D robotics perception, primarily focusing on LiDAR-based Life Long Localization and Mapping.</summary>      
             <ul>
                 <li align="justify">Research cutting-edge techniques to improve LiDAR-based lifelong localization and mapping systems. Implemented hierarchical bundle adjustment, pose graph optimization, etc. to enhance localization and mapping performance.</li>
                 <li align="justify">Refactor and modularize the SLAM pipeline to facilitate scalability, maintainability, and ease of integration with future enhancements.</li>
@@ -287,7 +285,7 @@
             <p align="justify">
               <details>
                 <summary>Contributed to the <a href="https://intrepid-project.eu/">Intriped Project</a> as a student research assistant and the 
-              <a href="https://amc-trr277.de/">Additive Manufacturing Project</a> as part of software practicum at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.
+              <a href="https://amc-trr277.de/">Additive Manufacturing Project</a> as part of software practicum at the <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>.</summary>      
                 <ul>
                   <li align="justify">Proposed methodology for robust, real-time control of material 
                     flow in additive manufacturing for construction using an RGB camera.
@@ -342,7 +340,7 @@
           <p align="justify">
             <details>
               <summary>Contributed to a diverse set of projects focused on the development of aerial robots at the <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a> at 
-            National University of Science and University.
+            National University of Science and University.</summary>      
             <ul>
               <li align="justify">Developed setup for Software in the Loop (SITL) simulation for tuning the flight controller. Integrated the X-Plane flight simulator with the flight controller firmware. Based on aeronautical design, developed models of vertical take-off and fixed-wing aerial vehicles for the simulator.</li>
               <li align="justify">Carried out end-to-end development of vertical take-off and fixed-wing aerial vehicles, from preliminary design (aeronautics calculations), detailed design (detailed CAD assemblies) to the export of manufacturing plans. Optimized design, aerodynamics, and structural components by conducting CFD, FEA, FSI simulations.</li>
@@ -376,7 +374,7 @@
           <br>
           <p align="justify">
             <details>
-              <summary>Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin</a>            
+              <summary>Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin.</a></summary>                  
               <ul>
                 
                   <li align="justify">Conducted a comparative study to numerically assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
