--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -237,7 +237,7 @@
         <br>
         <p align="justify">
           <details>
-          <summary>Conducted research in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by Huawei-ICTL and TUM-CMS (Grade: 1.0/1.0).</summary>            
+          <summary>Conducted research in the area of zero shot approches for “Open World 3D Scene Understanding” utilizing foundation and large language models; co-supervised by <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-ICTL</a> and <a href="https://www.cee.ed.tum.de/cms/home/">TUM-CMS</a>.</summary>            
           <ul>
               <li align="justify">Developed incremental and scalable framework for zero-shot 3D scene understanding utilizing foundation and large language models. </li>
               <li align="justify">Quantitatively and qualitatively demonstrated effectiveness of open vocabulary segmentation and context-based instance retrieval, exceeding state-of-the-art approaches. </li>
@@ -300,6 +300,7 @@
 
                 </ul>
               </details>
+            </p>
                 <div style="text-align: center;">
                   <img src="images/robot_walk_6.gif" alt="go1" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
                 </div>
@@ -319,7 +320,7 @@
                     <!--img src="images/wavefront_1.gif" alt="wavefront" style="width:30%; height:auto; border-radius: 5%; border: 2px solid #555"-->
                   </div>                  
                 </div>
-            </p>
+            
         </td>
     </tr>
 
@@ -385,10 +386,11 @@
                   <li align="justify">Mentored undergraduate student groups, on their research project.</li>
               </ul>
             </details>
+          </p>
               <div style="text-align: center;">
                 <img src="images/cfd_jet.gif" alt="cfd" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
               </div>
-          </p>
+          
           
       </td>
   </tr>
