--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -163,7 +163,8 @@
             Oct 2021 - Apr 2024
             <br>
             <p align="justify">
-              <b>Thesis:</b> Open World 3D Scene Understanding (<a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei</a>, <a href="https://www.cee.ed.tum.de/cms/home/">TUM</a>) <br>
+              <details>
+                <summary>Open World 3D Scene Understanding uzing Foundation and Large Language Models. </summary> 
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
@@ -181,7 +182,9 @@
                     <br-->
                     
                 </ul>
-            </p>
+              </details>
+              </p>
+
         </td>
     </tr>
 
@@ -199,11 +202,13 @@
           Dec 2015 - Sep 2019
           <br>
           <p align="justify">
-              Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets. 
+            <details>
+              <summary>Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets.
               <!--br-->
               <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
-              <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a>             
-          </p>
+              <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a> </summary>             
+            </details>
+            </p>
       </td>
   </tr>
 
