--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -108,10 +108,12 @@
 
           
               <p align="justify">I completed my masters, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
-                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I conducted my masters thesis in the field of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
-                before this I was working as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
+                part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I conducted my masters thesis research in the area of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
+                before this I worked as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
               </p>
+              
+              <p align="justify"> My research interest incude 3D Robotics Perception </p>
               <!--p align="justify">
                 From Jul-2020 to Oct-2021, I worked at the <a href="https://nust.edu.pk/">National University of Science and Technology</a>, 
                 as part of the <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones 
@@ -205,8 +207,7 @@
             <details>
               <summary>Numerical Investigation of Heat Transfer Enhancement Methods in Impinging Jets.
               <!--br-->
-              <a href="https://doi.org/10.1002/htj.21986">[1]</a>, 
-              <a href="https://www.dl.begellhouse.com/references/4c8f5faa331b09ea,212bf76947bffc03,5aa059fb1b898ef8.html">[2]</a> </summary>             
+              <a href="https://doi.org/10.1002/htj.21986">[1]</a></summary>             
             </details>
             </p>
       </td>
