--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -113,7 +113,7 @@
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
               </p>
               
-              <p align="justify"> My research interest incude 3D Robotics Perception </p>
+              <p align="justify"> My research interest incude 3D Robotics Learning and Perception. </p>
               <!--p align="justify">
                 From Jul-2020 to Oct-2021, I worked at the <a href="https://nust.edu.pk/">National University of Science and Technology</a>, 
                 as part of the <a href="https://nust.edu.pk/">Integrated Navigation Terrestrial Electromagnetic Lab</a>. I primarily worked on the design and development of drones 
@@ -136,7 +136,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/dp4.jpeg"><img src="images/dp4.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
+              <a href="images/dp2.jpeg"><img src="images/dp2.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
             </td>
           </tr>
         </table>
