--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -271,6 +271,13 @@
             </ul>
           </details>
         </p>
+        <div class="row">
+          <div class="column">
+            <div style="text-align: center;">
+              <img src="images/thesis_2.gif" alt="thesis_2" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555">
+            </div>
+          </div>                  
+        </div>
     </td>
   </tr>
 
@@ -384,8 +391,7 @@
               <summary>Assisted research activities in Mechanical Department of NED University under the supervision of <a href="https://scholar.google.com/citations?user=jOthSmQAAAAJ&hl=en">Dr.-Ing. Usman Allauddin.</a></summary>                  
               <ul>
                 
-                  <li align="justify">Conducted a comparative study to numerically assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from
-                    a hydraulic jump in jet impingement cooling.</li>
+                  <li align="justify">Conducted comparative studies to numerically assess different RANS turbulence models for prediction of the secondary peak in Nusselt number resulting from a hydraulic jump in jet impingement cooling.</li>
                   <li align="justify">Extensively reviewed literature and conducted numerical simulations related to impinging jets focusing on the influence of different types of fins,
                     surface topology, pulsating/synthetic jets, and nanofluids on heat transfer
                     characteristics. Collaborate on two peer-reviewed research papers based on findings.</li>
