--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,11 @@
                 &nbsp;/&nbsp;
                 <a href="mailto:rafaymohiuddin7@gmail.com">Contact</a>
                 &nbsp;/&nbsp;
-                <a href="mailto:rafaymohiuddin7@gmail.com">{UNDER DEVELOPMENT}</a>
+                <details>
+                  <summary>More</summary>   
+                  <a href="mailto:rafaymohiuddin7@gmail.com">{In Development ...}</a>   
+                </details>
+                
               </p>
             </td>
           </tr>            
