--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,11 +80,8 @@
                 &nbsp;/&nbsp;
                 <a href="mailto:rafaymohiuddin7@gmail.com">Contact</a>
                 &nbsp;/&nbsp;
-                <details>
-                  <summary>More</summary>   
-                  <a href="mailto:rafaymohiuddin7@gmail.com">{In Development ...}</a>   
-                </details>
-                
+                <a href="mailto:rafaymohiuddin7@gmail.com">{&#9654; More ...}</a>   
+                <details>               
               </p>
             </td>
           </tr>            
@@ -275,13 +272,10 @@
             </ul>
           </details>
         </p>
-        <div class="row">
-          <div class="column">
-            <div style="text-align: center;">
-              <img src="images/thesis_2.gif" alt="thesis_2" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555">
-            </div>
-          </div>                  
+        <div style="text-align: center;">
+          <img src="images/thesis_2.gif" alt="thesis_2" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
         </div>
+        
     </td>
   </tr>
 
