--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,7 +80,7 @@
                 &nbsp;/&nbsp;
                 <a href="mailto:rafaymohiuddin7@gmail.com">Contact</a>
                 &nbsp;/&nbsp;
-                <a href="mailto:rafaymohiuddin7@gmail.com">{&#9654; More ...}</a>   
+                <a href="mailto:rafaymohiuddin7@gmail.com">&#9654; More ...</a>   
                 <details>               
               </p>
             </td>
