--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@
                 <a href="https://github.com/rafaymhddn">GitHub</a> &nbsp;/&nbsp;
                 <a href="https://orcid.org/0000-0003-3926-3679">Orcid</a> &nbsp;/&nbsp;
                 <a href="https://www.linkedin.com/in/rafaymhddn/"> LinkedIn</a> &nbsp;/&nbsp;
-                <a href="https://drive.google.com/file/d/19KjiDw1hWZ3SkGTB34B4MH4JD5jaUtIT/view?usp=sharing" target="_blank"> CV</a> 
+                <a href="https://docs.google.com/document/d/1GvD4gJcm1vsw1i7xJ6f0oyT20FhlqEj4gIxZQDaVFO4/edit?usp=sharing" target="_blank"> CV</a> 
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
