--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,7 +136,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/dp3.png"><img src="images/dp3.png" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
+              <a href="images/dp4.jpeg"><img src="images/dp4.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
             </td>
           </tr>
         </table>
