--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -104,10 +104,10 @@
             <td style="padding:2.5%;width:60%;vertical-align:middle">
             
               <br>
-              <p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p> 
+              <!--p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p--> 
 
           
-              <p align="justify">I completed my masters, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+              <p align="justify">Hi 👋, I'm Rafay!. I recently completed my masters, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
                 part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I conducted my master's thesis research in the area of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
                 before this I worked as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
@@ -248,7 +248,7 @@
               <li align="justify">Developed incremental and scalable framework for zero-shot 3D scene understanding utilizing foundation and large language models. </li>
               <li align="justify">Quantitatively and qualitatively demonstrated effectiveness of open vocabulary segmentation and context-based instance retrieval, exceeding state-of-the-art approaches. </li>
               <li align="justify">Explored downstream applications such as 3D instance segmentation, automatic labeling, and spatial reasoning (chat with scene using LLM). </li>
-              <li align="justify">Currently, working on research paper to publish on findings. </li>
+              <li align="justify">Currently, working on research paper to publish findings. </li>
               <!--li align="justify">Developed feature fusion scheme based on CLIP embeddings for context-based localization of instances in 3D space with open-vocabulary queries. Quantitative and qualitative performance exceeds current state of the art.</li> 
               <li align="justify">Additionally, conducted explorative study and demonstrated global automatic labeling and spatial reasoning over 3D scene, using large language modes.</li>
               <li align="justify">Currently, working on research paper based on findings.</li--> 
@@ -272,7 +272,7 @@
           </details>
         </p>
         <div style="text-align: center;">
-          <img src="images/thesis_2.gif" alt="thesis_2" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
+          <img src="images/thesis_3.gif" alt="thesis_3" style="width:75%; height:150px; border-radius: 5%; border: 2px solid #555"> 
         </div>
         
     </td>
