--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -180,7 +180,7 @@
             <br>
             <p align="justify">
               <details>
-                <summary>Open World 3D Scene Understanding uzing Foundation and Large Language Models. </summary> 
+                <summary>Open World 3D Scene Understanding using Foundation Models. </summary> 
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
