--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,7 @@
               <!--p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p--> 
 
           
-              <p align="justify">Hi 👋, I'm Rafay!. I recently completed my masters, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+              <p align="justify">Hi 👋, I'm Rafay!. I completed my masters, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
                 part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I conducted my master's thesis research in the area of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
                 before this I worked as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
@@ -150,7 +150,7 @@
               </p>
             </td>
             <td style="padding:2.5%;width:30%;max-width:30%">
-              <a href="images/dp24.jpeg"><img src="images/dp24.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
+              <a href="images/dp24of.jpeg"><img src="images/dp24of.jpeg" style="width:100%;max-width:100%; border-radius: 5%" alt="profile photo"  class="hoverZoomLink"/></a>              
             </td>
           </tr>
         </table>
