project page added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -176,11 +176,11 @@
             <br>
             <papertitle style="color:gray"><big>Masters of Science </big></papertitle><papertitle><big>Computational Mechanics</big></papertitle>
             <br>
-            Oct 2021 - Apr 2024
+            Oct 2021 - Jul 2024
             <br>
             <p align="justify">
               <details>
-                <summary>Open World 3D Scene Understanding using Foundation Models. </summary> 
+                <summary>Open World 3D Scene Understanding using Foundation Models. Web:<a href="https://opensu3d.github.io/">opensu3d.github.io</a></summary> 
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
