--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -121,7 +121,7 @@
               <!--p align="justify">Hi 👋, I'm Rafay! I work with mathematical models, convert them to code to solve problems in engineering and science.  </p--> 
 
           
-              <p align="justify">Hi 👋, I'm Rafay!. I am masters student, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
+              <p align="justify">Hi, I'm Rafay 👋. I am masters student, at the <a href="https://www.ed.tum.de/en/ed/home-1/">TUM School of Engineering and Design</a>, 
                 part of the <a href="https://www.tum.de/en/">Technical University of Munich</a>. I conducted my master's thesis research in the area of 'Open World 3D Scene Understanding' at <a href="https://huaweiresearchcentergermanyaustria.teamtailor.com/departments/intelligent-cloud-technologies-laboratory">Huawei-Intelligent Cloud Technologies Lab</a>, 
                 before this I worked as a Robotics Research Intern mainly focusing on life long localization and mapping. Prior to that, during my masters I worked as a student research assistant at the 
                 <a href="https://www.cee.ed.tum.de/cms/home/">Chair of Computational Modeling and Simulation</a>, where I work on diverse robotics projects.
@@ -180,7 +180,7 @@
             <br>
             <p align="justify">
               <details>
-                <summary>Open World 3D Scene Understanding using Foundation Models. Web:<a href="https://opensu3d.github.io/">opensu3d.github.io</a></summary> 
+                <summary>Open World 3D Scene Understanding using Foundation Models. <a href="https://opensu3d.github.io/">Project Page</a></summary> 
                 <!--ul>
                     <li align="justify"><b>Computation:</b> Advacnced Deep Learning in Physics, Computation in Engineering I (C++), Computation on Engineering II (C++), Cyber-Physical Systems Lab, Elements of Machine Learning, Functional Analysis and Computational Linear Algebra, Numerical Optimization - Robot Design and Control, Professional Software Development, Scientific Visualization, Software Lab  </li> 
                     <br>                               
